add_subdirectory(util)
add_subdirectory(module)
add_subdirectory(core)
add_subdirectory(entropy/gabac)
add_subdirectory(entropy/paramcabac)
#add_subdirectory(format/fasta)
#add_subdirectory(format/fastq)
#add_subdirectory(format/mgg)
#add_subdirectory(quality/paramqv1)
#add_subdirectory(read/localassembly)
#add_subdirectory(format/mgb)
#add_subdirectory(read/basecoder)
#add_subdirectory(format/mgrec)
#add_subdirectory(read/refcoder)
#add_subdirectory(read/lowlatency)
#add_subdirectory(read/spring)
#add_subdirectory(quality/qvwriteout)
#add_subdirectory(name/tokenizer)
#add_subdirectory(quality/calq)
add_subdirectory(entropy/codec)
add_subdirectory(entropy/mpegg-codecs)