add_subdirectory(backbone)
add_subdirectory(fasta)
add_subdirectory(fastq)
add_subdirectory(gabac)
add_subdirectory(local_assembly)
add_subdirectory(mpegg_p1)
add_subdirectory(mpegg_p2)
add_subdirectory(mpegg_read)
add_subdirectory(mpegg_rec)
add_subdirectory(reference_based)
add_subdirectory(sam)
add_subdirectory(spring)
add_subdirectory(util)
